--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,1 +1,1 @@
-{"call_me_btn":"Call Me","email_input_label":"Your Email","language_selectbox":"English","message_input_label":"Your Message","my_projects_btn":"My Projects","name_input_label":"Your Name","submit_btn":"Submit"}
+{"submit_btn":"Submit","call_me_btn":"Call Me","my_projects_btn":"My Projects","name_input_label":"Your Name","email_input_label":"Your Email","language_selectbox":"English","message_input_label":"Your Message"}
