Add i18nexus for easier text translation

--- a/public/locales/fa/common.json
+++ b/public/locales/fa/common.json
@@ -1,1 +1,1 @@
-{"submit_btn":"ارسال","call_me_btn":"تماس ","my_projects_btn":"پروژه های من","name_input_label":"اسم شما","email_input_label":"ایمیل شما","language_selectbox":"انگلیسی","message_input_label":"پیغام شما"}
+{"call_me_btn":"تماس ","email_input_label":"ایمیل شما","language_selectbox":"انگلیسی","message_input_label":"پیغام شما","name_input_label":"اسم شما","projects_btn":"پروژه ها","submit_btn":"ارسال"}
