--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -1,15 +1,1 @@
-{
-  "about_title": "About Me",
-  "about_text_1": "Hello! My name is Arvin Ramezani. I’m 30 years old living in Iran / Mazandaran / Babolsar.",
-  "about_text_2": "I started learning Web Development in August 2020 with Persian online tutorials and YouTube, after which I expanded my knowledge through Udemy online courses and especially Academind courses.",
-  "about_text_3": "Trying to become a JavaScript & TypeScript Full-Stack Developer.",
-  "skills_title": "Skills",
-  "footer_contact": "Contact",
-  "projects_title": "My Projects",
-  "skill_name_nextjs": "NextJS",
-  "skill_name_nodejs": "NodeJS",
-  "footer_location_text": "Iran / Mazandaran / Babolsar",
-  "hero_section_heading": "Bring your online dreams to life",
-  "footer_send_email_title": "Send Email",
-  "hero_section_sub_heading": "FAST WEB APPLICATIONS WITH REACT.JS AND NODE.JS\n\n"
-}
+{"about_text_1":"My name is Arvin Ramezani. I’m 30 years old living in Iran / Mazandaran / Babolsar.","about_text_2":"I started learning Web Development in August 2020 with Persian online tutorials and YouTube, after which I expanded my knowledge through Udemy online courses and especially Academind courses.","about_text_3":"Trying to become a JavaScript & TypeScript Full-Stack Developer.","about_title":"About Me","footer_contact":"Contact","footer_location_text":"Iran / Mazandaran / Babolsar","footer_send_email_title":"Send Email","hero_section_heading":"Bring your online dreams to life","hero_section_sub_heading":"FAST WEB APPLICATIONS WITH REACT.JS AND NODE.JS\n\n","projects_title":"My Projects","skill_name_nextjs":"NextJS","skill_name_nodejs":"NodeJS","skills_title":"Skills"}
