--- a/public/locales/fa/common.json
+++ b/public/locales/fa/common.json
@@ -1,14 +1,1 @@
-{
-  "call_me_btn": "تماس ",
-  "email_input_label": "ایمیل شما",
-  "got_it_btn": "گرفتم",
-  "language_selectbox": "انگلیسی",
-  "message_input_label": "پیغام شما",
-  "name_input_label": "اسم شما",
-  "next_pagination_btn": "بعدی",
-  "prev_pagination_btn": "قبلی",
-  "projects_btn": "پروژه ها",
-  "submit_btn": "ارسال",
-  "view_on_github_btn": "مشاهده در گیت هاب",
-  "view_online_btn": "مشاهده آنلاین"
-}
+{"call_me_btn":"تماس ","email_input_label":"ایمیل شما","got_it_btn":"گرفتم","language_selectbox":"انگلیسی","message_input_label":"پیغام شما","name_input_label":"اسم شما","next_pagination_btn":"بعدی","prev_pagination_btn":"قبلی","projects_btn":"پروژه ها","submit_btn":"ارسال","view_on_github_btn":"مشاهده در گیت هاب","view_online_btn":"مشاهده آنلاین"}
