Fix experiences title translation

--- a/public/locales/fa/home.json
+++ b/public/locales/fa/home.json
@@ -179,7 +179,7 @@
   "skills_title": "مهارت ها",
   "title_tag": "آروین رمضانی - برنامه نویس وب",
 
-  "experience_title": "سوابق کاری",
+  "experiences_title": "سوابق کاری",
   "experiences_madaar_company": "مدارالذکی",
   "experiences_madaar_start_date": "آبان ۱۴۰۲",
   "experiences_madaar_end_date": "مرداد ۱۴۰۳",
